# pyln

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: README.md
examples/: beads.py  cones.py  csg.py  cube.py  cubes.py  function.py  mountain.py  outline.py  skyscrapers.py  skyscrapers_striped.py  slicer.py  suzanne.py  voxelize.py
pyln/: __init__.py  __main__.py  logic.py  paths.py  shape.py  tree.py  utility.py
pyln/shapes/: __init__.py  cone.py  cube.py  cylinder.py  function.py  mesh.py  scene.py  shape.py  sphere.py  triangle.py
tests/: example_test.py
tests/test_example/: test_hello.py
