# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyln"
version = "0.1.0"
description = "3D line art engine (Python port of fogleman/ln)"
readme = "README.md"
authors = [
  "out-of-cheese-error <justacythonblog@gmail.com>"
]
license = "MIT"
repository = "https://github.com/out-of-cheese-error/pyln"
homepage = "https://github.com/out-of-cheese-error/pyln"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"pyln" = "pyln.__main__:app"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
importlib_metadata = {version = "^4.0.1", python = "<3.8"}
numpy = "^1.20.2"
numba = "^0.53.1"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
darglint = "^1.8.0"
isort = "^5.8.0"
pyupgrade = "^2.23.0"
black = "^21.4b2"
mypy = "^0.812"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.3"
pylint = "^2.8.2"
pydocstyle = "^6.0.0"
pre-commit = "^2.12.1"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
