# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyln"
version = "0.1.0"
description = "3D line art engine (Python port of fogleman/ln)"
readme = "README.md"
authors = [
  "Ninjani"
]
license = "MIT"
repository = "https://github.com/out-of-cheese-error/pyln"
homepage = "https://github.com/out-of-cheese-error/pyln"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"pyln" = "pyln.__main__:app"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Pillow = "^9.1.0"
numpy = "^1.23.4"
importlib-metadata = "^5.0.0"
numba = "^0.56.4"
scipy = "^1.9.3"

[tool.poetry.group.dev.dependencies]
darglint = "^1.8.1"
isort = "^5.10.1"
pyupgrade = "^3.2.2"
mypy = "^0.991"
bandit = "^1.7.4"
safety = "^2.3.1"
pytest = "^7.2.0"
pydocstyle = "^6.1.1"
pre-commit = "^2.19.0"
pylint = "^2.15.5"
black = "^22.10.0"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py39"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
